# mlx-flux2

./: .gitignore  CLAUDE.md  README.md  config.py  defaults.py  generate.py  image.py  model.py  pipeline.py  pyproject.toml  requirements.txt  sampling.py  text_encoder.py  tokenizer.py  utils.py  vae.py  weight_converter.py
.github/workflows/: ci.yml
scripts/: benchmark.py
src/flux2_mlx/: __init__.py  __main__.py  config.py  defaults.py  generate.py  image.py  model.py  pipeline.py  sampling.py  text_encoder.py  tokenizer.py  utils.py  vae.py  weight_converter.py
tests/: __init__.py  test_config.py  test_image.py  test_import.py  test_tokenizer.py
